trunk/Archive2/9c/0eb8f8b49a5772/output
main.cpp:11:9: error: 'foo' is a private member of 'X'
        foo();
        ^
main.cpp:4:10: note: declared private here
    void foo();
         ^
1 error generated.
